[gd_scene load_steps=2 format=3 uid="uid://wl7d0mjmesr5"]

[ext_resource type="Script" uid="uid://c4vvt7qg2vfrf" path="res://scenes/firebase.gd" id="1_jlg52"]

[node name="Auth" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlg52")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1080, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.533333, 0.686275, 0.588235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(800, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -64.5
offset_right = 43.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="StateLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Logged out"

[node name="EmailLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
placeholder_text = "ENTER EMAIL"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
placeholder_text = "ENTER PASSWORD"
alignment = 1

[node name="LoginButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "LOGIN"

[node name="SignupButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "SIGN UP"

[node name="AnonymousLoginButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "LOGIN ANONYMOUSLY"
